tests/baselines/reference/objectTypesWithOptionalProperties2.errors.txt
==== tests/cases/compiler/objectTypesWithOptionalProperties2.ts (13 errors) ====
    // Illegal attempts to define optional methods
    
    var a: {
        x()?: number; // error
           ~
!!! error TS1005: ';' expected.
            ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
    }
    
    interface I {
        x()?: number; // error
           ~
!!! error TS1005: ';' expected.
            ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
    }
    
    class C {
        x()?: number; // error
           ~
!!! error TS1005: ';' expected.
            ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
    }
    
    interface I2<T> {
        x()?: T; // error
           ~
!!! error TS1005: ';' expected.
            ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
    }
    
    class C2<T> {
        x()?: T; // error
           ~
!!! error TS1005: ';' expected.
            ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
    }
    
    
    var b = {
        x()?: 1 // error
           ~
!!! error TS1005: '{' expected.
            ~
!!! error TS1008: Unexpected token; 'property or accessor' expected.
    }
    ~
!!! error TS1005: ':' expected.